--- a/details.html
+++ b/details.html
@@ -5,7 +5,7 @@
     <title>Nothing is here</title>
 </head>
 <body>
-<h1>You can get lost</h1>
+<h1>Why the hell you want to contact me</h1>
 
 </body>
 </html>
