--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <img src="arthur.png" alt="Arthur Morgan ">
     <h1>The Old Legend <u><a href="https://reddead.fandom.com/wiki/Arthur_Morgan">Arthur Morgan</a></u> </h1>
-    <p><em>The Best <strong>Gun Slinger</strong> ever lived</em></p>
-    <p>Arthur Morgan who was known as the best gun slinger in the world. The best game character ever.</p>
+    <p><em>The Best <strong>Gunslinger</strong> ever lived</em></p>
+    <p>Arthur Morgan who was known as the best gunslinger in the world. The best game character ever.</p>
     <hr>
 
     <h2> The Friends</h2>
